// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Caption renders 1`] = `
<span
  className="sc-kSzVC eYvA-DM"
>
  Caption
</span>
`;

exports[`Caption renders colors 1`] = `
Array [
  <span
    className="sc-kSzVC eYvA-DM"
  >
    Default color is Bulma
  </span>,
  <span
    className="sc-kSzVC krrzHR"
    color="piccolo.100"
  >
    Piccolo
  </span>,
  <span
    className="sc-kSzVC kDBwer"
    color="trunks.100"
  >
    Trunks
  </span>,
  <span
    className="sc-kSzVC bfioAR"
    color="krillin.100"
  >
    Krillin
  </span>,
]
`;

exports[`Caption renders font weights 1`] = `
Array [
  <span
    className="sc-kSzVC eYvA-DM"
  >
    Default font-weight is bold
  </span>,
  <span
    className="sc-kSzVC eIbruR"
  >
    Font-weight is regular
  </span>,
]
`;

exports[`Caption renders semantic tags 1`] = `
Array [
  <span
    className="sc-kSzVC eYvA-DM"
  >
    Span is a default tag
  </span>,
  <p
    className="sc-kSzVC eYvA-DM"
  >
    Paragraph tag
  </p>,
  <label
    className="sc-kSzVC eYvA-DM"
  >
    Label tag
  </label>,
]
`;

exports[`Caption renders sizes 1`] = `
Array [
  <span
    className="sc-kSzVC eYvA-DM"
  >
    Default font-size is 10px
  </span>,
  <span
    className="sc-kSzVC kbkQGR"
    size={9}
  >
    Size is 9px
  </span>,
]
`;

exports[`Caption renders text-align 1`] = `
Array [
  <span
    className="sc-kSzVC eYvA-DM"
  >
    Text-align is not specified
  </span>,
  <span
    className="sc-kSzVC fWBTtX"
  >
    Centered text
  </span>,
  <span
    className="sc-kSzVC bsuHnI"
  >
    Right alignment
  </span>,
]
`;
